# d74169

./: .gitignore  CLAUDE.md  DISCOVERIES.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  SYNTHESIS.md  d74169_phase_coherence.py  pyproject.toml
.github/workflows/: ci.yml
d74169/: __init__.py  advanced.py  rlm_agent.py  sonar.py  validation.py
docs/: gallery.html  index.html
examples/: rlm_prime_search.py
papers/: d74169_spectral_primality.md  d74169_spectral_primality.tex
research/: FINDINGS.md  ablation_076_ceiling.py  ablation_076_fast.py  analyze_transformer_breakthrough.py  project_fibonacci.py  project_highway.py  project_highway_chain.py  project_lidar.py  project_phi_prime.py  project_primorial_30030_parallel.py  project_primorial_scan.py  project_qiskit_xp_parallel.py  project_quantum_simulation.py  project_transformer_inverse.py  project_transformer_primality.py  project_zeropoint.py  project_zeropoint_v2.py  research_attention_maps.py  research_boundary.py  research_crypto_assessment.py  research_deep.py  research_holographic_bound.py  research_inverse_ml.py  research_llm_zero_signatures.py  research_minimum_zeros.py  research_minimum_zeros_v2.py  research_multipoint_correlations.py  research_phase_steering_proof.py  research_physical.py  research_predict.py  research_prime_gap_prediction.py  research_probe_llm_zeros.py  research_quantum.py  research_quantum_circuit_hxp.py  research_recursive_resonator.py  research_self_probe_zeros.py  research_sophie.py  verify_score_detection.py
simulation/: d74169_simulation.html  d74169_unified_v5.html
(+1 files in other folders)
