[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d74169"
version = "2.1.0"
authors = [
    { name = "@d74169" }
]
description = "Prime detection via Riemann zeros - high-performance inverse scattering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["prime numbers", "riemann zeta", "number theory", "mathematics", "spectral analysis"]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
fast = ["numba>=0.56.0"]
full = ["numba>=0.56.0", "scipy>=1.7.0", "matplotlib>=3.4.0"]

[project.scripts]
d74169 = "d74169.validation:full_validation"

[project.urls]
Homepage = "https://github.com/d74169/d74169"
"Bug Reports" = "https://github.com/d74169/d74169/issues"
Source = "https://github.com/d74169/d74169"

[tool.setuptools.packages.find]
where = ["."]
